--- a/Knowledges/DocumentValue/DocumentValueWebApi.csproj
+++ b/Knowledges/DocumentValue/DocumentValueWebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,8 @@
 		<PackageReference Include="MassTransit.AspNetCore" Version="7.2.4" />
 		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.2.4" />
 		<PackageReference Include="MassTransit.RabbitMQ" Version="7.2.4" />
+		<PackageReference Include="MediatR" Version="9.0.0" />
+		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
